--- a/index.html
+++ b/index.html
@@ -5,12 +5,24 @@
 
     <title>Flexbox</title>
 
-	<!--<link rel="stylesheet" href="main.css"/>-->
+	<link rel="stylesheet" href="main.css"/>
 
 </head>
 <body>
 
-	hi
+	<h1>Flexbox Classes Demo</h1>
+	
+	<h3>Row</h3>
+	<div class='flexbox row' style='background-color:gray;'>
+		<div>Left</div>
+		<div class='flex1' style='text-align:center;'>Middle Flex</div>
+		<div>Right</div>
+	</div>
+	
+	<h3>Center</h3>
+	<div class='flexbox center' style='height:200px; background-color:gray;'>
+		<div>My centered item!</div>
+	</div>
 
 </body>
 </html>
